[enhancement] fix layout problems of repository root input field

--- a/public/stylesheets/form.less
+++ b/public/stylesheets/form.less
@@ -1,5 +1,6 @@
 form input[type="text"] {
-	padding-bottom: 0px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	font-size: 18px;	
 }
 
@@ -21,7 +22,7 @@ form {
 .input-label {
 	position: absolute;
 	right: 26px;
-	margin-top: 6px;
+	margin-top: 3px;
 }
 
 
